--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 <papertitle>Hierarchical decision making by generating and following natural language instructions</papertitle>
             </a>
             <br>
-            <span class="authorme">Hengyuan Hu</span>, Denis Yarats, Qucheng Gong, Yuandong Tian, Mike Lewis
+            <span class="authorme">Hengyuan Hu*</span>, Denis Yarats*, Qucheng Gong, Yuandong Tian, Mike Lewis
             <br>
             <em>NeurIPS</em>, 2019
             <p></p>
