--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 
 <!-- beginning of papers -->
-
 <template id="cicero">
 <tr>
     <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
@@ -69,7 +68,6 @@
         </td>
     </tr>
 </template>
-
 
 <template id="improvised">
     <tr>
@@ -448,8 +446,8 @@
         </td>
     </tr>
 </template>
-
 <!-- end of papers -->
+
 
 <script>
 function showContent(src, tgt) {
@@ -459,6 +457,8 @@ function showContent(src, tgt) {
 }
 </script>
 
+
+<!-- main page -->
 <body>
     <!-- overall table -->
     <table style="width:100%;max-width:900px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
