add instruct rl image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <tr>
     <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
         <div>
-            <img src='images/cicero.png' width="160"></div>
+            <img src='images/instruct-rl.jpg' width="160"></div>
         </div>
     </td>
 
