fix instruct appear twice on selected

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@ function showContent(src, tgt) {
                                             </td>
                                         </tr>
                                         <script>
-                                            showContent("#instruct-rl", "#table-selected")
+                                            showContent("#instruct-rl", "#topic-human-ai")
                                             showContent("#improvised", "#topic-human-ai")
                                             showContent("#k-level", "#topic-human-ai")
                                             showContent("#obl", "#topic-human-ai")
@@ -646,6 +646,7 @@ function showContent(src, tgt) {
                         <div class="tab-pane fade" id="tab3">
                             <table id="table-by-date"><tbody>
                                 <script>
+                                    showContent("#instruct-rl", "#table-by-date")
                                     showContent("#adversity", "#table-by-date")
                                     showContent("#cicero", "#table-by-date")
                                     showContent("#pikl-hanabi", "#table-by-date")
