--- a/index.html
+++ b/index.html
@@ -506,28 +506,37 @@ function showContent(src, tgt) {
             <p style="text-align:center;padding-top:5%"><name>Hengyuan Hu</name></p>
 
             <tr style="padding:0px">
-                <td style="padding:2.5%;width:38%;max-width:38%">
+                <td style="padding:2.5%;width:25%;max-width:30%;vertical-align:top">
                     <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile.jpg" class="img-rounded"></a>
                 </td>
 
-                <td style="padding:2.5%;width:62%;vertical-align:top">
+                <td style="padding:2.5%;width:66.5%;vertical-align:top">
                     <p>
                         I am a PhD student at <a href="https://ai.stanford.edu/">Stanford University</a>
                         advised by <a href="https://dorsa.fyi/">Dorsa Sadigh</a>.
                         I am interested in robotics, human-AI coordination and reinforcement learning.
                     </p>
                     <p>
-                        Previously, I spent 4 years as a Research Engineer at FAIR where I worked closely with
-                        <a href="https://www.jakobfoerster.com/">Jakob Foerster</a> and <a href=https://www.cs.cmu.edu/~noamb/>Noam Brown</a>
-                        on reinforcement learning, search and coordination in multi-agent environments.
-                        I was also a core member of the team that created <a href=https://ai.facebook.com/research/cicero>Cicero</a>,
-                        the first AI that reaches human level in Diplomacy.
+                        Previously, I spent 4 years as a Research
+                        Engineer at FAIR where I worked closely with
+                        <a href="https://www.jakobfoerster.com/">Jakob
+                        Foerster</a> and
+                        <a href=https://www.cs.cmu.edu/~noamb/>Noam
+                        Brown</a> on reinforcement learning, search
+                        and coordination in multi-agent environments.
+                        I was a core member of the team that created
+                        <a href=https://ai.facebook.com/research/cicero>Cicero</a>,
+                        the first AI that reaches human level in
+                        Diplomacy. I also trained the most human-like agent in
+                        <a href=https://arxiv.org/abs/2103.04000>Hanabi</a>
+                        without using any human data.
                     </p>
                     <p>
-                        I started my journey in CS and AI as an undergrad in <a href=https://hkust.edu.hk>HKUST</a>
-                        and did my thesis with <a href="http://home.cse.ust.hk/~cktang/bio.html">Chi-Keung Tang</a>.
+                        I started my journey in CS and AI as an
+                        undergrad in
+                        <a href=https://hkust.edu.hk>HKUST</a>.
                     </p>
-                    <p style="text-align:center">
+                    <p style="text-align:left">
                         <a href="mailto:hengyuan.hhu@gmail.com">Email</a> &nbsp/&nbsp
                         <a href="https://github.com/hengyuan-hu">Github</a> &nbsp/&nbsp
                         <a href="https://scholar.google.com/citations?hl=en&user=oF46lMIAAAAJ">Google Scholar</a>
