update rss and icra

--- a/index.html
+++ b/index.html
@@ -17,11 +17,68 @@
 
 
 <!-- beginning of papers -->
+<template id="ibrl">
+    <tr>
+        <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
+            <div>
+                <img src='images/ibrl.png' width="180"></div>
+            </div>
+        </td>
+
+        <td style="width:75%; vertical-align:middle; padding-bottom:5%">
+            <a href="https://arxiv.org/abs/2304.07297">
+                <papertitle>Imitation Bootstrapped Reinforcement Learning</papertitle>
+            </a>
+            <br>
+            <span class="authorme">Hengyuan Hu</span>, Suvir Mirchandani, Dorsa Sadigh
+            <br>
+            <em>RSS</em>, 2024
+            <p>
+                <a href="https://ibrl.hengyuanhu.com/">Website</a>, <a href="https://github.com/hengyuan-hu/ibrl">Code</a>
+            </p>
+            <p>
+              IBRL is a sample-efficient <it>RL with demonstrations method</it>
+              that first trains an IL policy on the provided demonstrations and
+              then uses it to propose alternative actions for both online
+              exploration and bootstrapping target values. We train IBRL on
+              challenging <b>real robot</b> tasks directly without sim-to-real.
+            </p>
+        </td>
+    </tr>
+</template>
+
+<template id="social-vqa">
+    <tr>
+        <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
+            <div>
+                <img src='images/kwon-icra.png' width="180"></div>
+            </div>
+        </td>
+
+        <td style="width:75%; vertical-align:middle; padding-bottom:5%">
+            <a href="https://arxiv.org/abs/2304.07297">
+                <papertitle>Toward Grounded Commonsense Reasoning</papertitle>
+            </a>
+            <br>
+            Minae Kwon, <span class="authorme">Hengyuan Hu</span>, Vivek Myers, Siddharth Karamcheti, Anca Dragan, <br>Dorsa Sadigh
+            <br>
+            <em>ICRA</em>, 2024
+            <p>
+                <a href="https://minaek.github.io/grounded_commonsense_reasoning/">Website</a>
+            </p>
+            <p>
+                We equip robots with commonsense reasoning skills by enabling them to actively gather missing information from the environment.
+                To reason in the real world, robots must go beyond passively querying LLMs and actively gather information from the environment that is required to make the right decision. We propose an approach that leverages an LLM and vision language model (VLM) to help a robot actively perceive its environment to perform grounded commonsense reasoning
+            </p>
+        </td>
+    </tr>
+</template>
+
 <template id="instruct-rl">
 <tr>
     <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
         <div>
-            <img src='images/instruct-rl.jpg' width="160"></div>
+            <img src='images/instruct-rl.jpg' width="180"></div>
         </div>
     </td>
 
@@ -30,7 +87,7 @@
             <papertitle>Language Instructed Reinforcement Learning for Human-AI Coordination</papertitle>
         </a>
         <br>
-        Hengyuan Hu, Dorsa Sadigh
+        <span class="authorme">Hengyuan Hu</span>, Dorsa Sadigh
         <br>
         <em>ICML</em>, 2023
         <p></p>
@@ -51,7 +108,7 @@
 <tr>
     <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
         <div>
-            <img src='images/cicero.png' width="160"></div>
+            <img src='images/cicero.png' width="180"></div>
         </div>
     </td>
 
@@ -80,7 +137,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/adversity.png' width="160">
+                <img src='images/adversity.png' width="180">
             </div>
         </td>
 
@@ -109,7 +166,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div class="one">
-                <img src='images/improvised.png' width="160">
+                <img src='images/improvised.png' width="180">
             </div>
         </td>
 
@@ -138,7 +195,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/belief-ft.png' width="160">
+                <img src='images/belief-ft.png' width="180">
             </div>
         </td>
 
@@ -164,7 +221,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/obl.png' width="160">
+                <img src='images/obl.png' width="180">
             </div>
         </td>
 
@@ -191,7 +248,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/pikl.png' width="160">
+                <img src='images/pikl.png' width="180">
             </div>
         </td>
 
@@ -218,7 +275,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <!-- <img src='' width="160"> -->
+                <!-- <img src='' width="180"> -->
             </div>
         </td>
 
@@ -244,7 +301,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <!-- <img src='' width="160"> -->
+                <!-- <img src='' width="180"> -->
             </div>
         </td>
 
@@ -271,7 +328,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/k-level.png' width="160">
+                <img src='images/k-level.png' width="180">
             </div>
         </td>
 
@@ -297,7 +354,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/other-play.png' width="160">
+                <img src='images/other-play.png' width="180">
             </div>
         </td>
 
@@ -325,7 +382,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/trajedi.png' width="160">
+                <img src='images/trajedi.png' width="180">
             </div>
         </td>
 
@@ -352,7 +409,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/lbs.png' width="160">
+                <img src='images/lbs.png' width="180">
             </div>
         </td>
 
@@ -379,7 +436,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/rr.png' width="160">
+                <img src='images/rr.png' width="180">
             </div>
         </td>
 
@@ -405,7 +462,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/sparta.png' width="160">
+                <img src='images/sparta.png' width="180">
             </div>
         </td>
 
@@ -433,7 +490,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/sad.png' width="160">
+                <img src='images/sad.png' width="180">
             </div>
         </td>
 
@@ -461,7 +518,7 @@
     <tr>
         <td style="width:25%; vertical-align:middle; padding-bottom:5%;">
             <div>
-                <img src='images/minirts.png' width="160">
+                <img src='images/minirts.png' width="180">
             </div>
         </td>
 
@@ -576,6 +633,7 @@ function showContent(src, tgt) {
                         <div class="tab-pane fade in active" id="tab1">
                             <table id="table-selected"><tbody>
                                 <script>
+                                    showContent("#ibrl", "#table-selected")
                                     showContent("#instruct-rl", "#table-selected")
                                     showContent("#cicero", "#table-selected")
                                     showContent("#obl", "#table-selected")
@@ -588,6 +646,17 @@ function showContent(src, tgt) {
                         <div class="tab-pane fade" id="tab2">
                             <table id="table-by-topic"><tbody>
                                 <tr><td>
+                                    <table id="topic-robotics"><tbody>
+                                        <tr>
+                                            <td style="width:25%; vertical-align:middle; padding-bottom:2.5%;">
+                                                <h4>Robotics</h4>
+                                            </td>
+                                        </tr>
+                                        <script>
+                                            showContent("#ibrl", "#topic-robotics")
+                                            showContent("#social-vqa", "#topic-robotics")
+                                        </script>
+                                    </tbody></table>
                                     <table id="topic-human-ai"><tbody>
                                         <tr>
                                             <td style="width:25%; vertical-align:middle; padding-bottom:2.5%;">
@@ -655,6 +724,8 @@ function showContent(src, tgt) {
                         <div class="tab-pane fade" id="tab3">
                             <table id="table-by-date"><tbody>
                                 <script>
+                                    showContent("#ibrl", "#table-by-date")
+                                    showContent("#social-vqa", "#table-by-date")
                                     showContent("#instruct-rl", "#table-by-date")
                                     showContent("#adversity", "#table-by-date")
                                     showContent("#cicero", "#table-by-date")
