--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <papertitle>Toward Grounded Commonsense Reasoning</papertitle>
             </a>
             <br>
-            Minae Kwon, <span class="authorme">Hengyuan Hu</span>, Vivek Myers, Siddharth Karamcheti, Anca Dragan, <br>Dorsa Sadigh
+            Minae Kwon, <span class="authorme">Hengyuan Hu</span>, Vivek Myers, Siddharth Karamcheti, Anca Dragan, Dorsa Sadigh
             <br>
             <em>ICRA</em>, 2024
             <p>
@@ -445,7 +445,7 @@
                 <papertitle>Ridge rider: Finding diverse solutions by following eigenvectors of the hessian</papertitle>
             </a>
             <br>
-            Jack Parker-Holder, Luke Metz, Cinjon Resnick, <span>Hengyuan Hu</span>, Adam Lerer, Alistair Letcher, Alexander Peysakhovich, Aldo Pacchiano, Jakob Foerster
+            Jack Parker-Holder, Luke Metz, Cinjon Resnick, <span class="authorme">Hengyuan Hu</span>, Adam Lerer, Alistair Letcher, Alexander Peysakhovich, Aldo Pacchiano, Jakob Foerster
             <br>
             <em>NeurIPS</em>, 2020
             <p></p>
@@ -561,12 +561,10 @@ function showContent(src, tgt) {
         <tr><td>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <p style="text-align:center;padding-top:5%"><name>Hengyuan Hu</name></p>
-
             <tr style="padding:0px">
                 <td style="padding:2.5%;width:25%;max-width:30%;vertical-align:top">
                     <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile.jpg" class="img-rounded"></a>
                 </td>
-
                 <td style="padding:2.5%;width:66.5%;vertical-align:top">
                     <p>
                         I am a PhD student at <a href="https://ai.stanford.edu/">Stanford University</a>
@@ -588,11 +586,11 @@ function showContent(src, tgt) {
                         <a href=https://arxiv.org/abs/2103.04000>Hanabi</a>
                         without using any human data.
                     </p>
-                    <p>
+                    <!-- <p>
                         I started my journey in CS and AI as an
                         undergrad in
                         <a href=https://hkust.edu.hk>HKUST</a>.
-                    </p>
+                    </p> -->
                     <p style="text-align:left">
                         <a href="mailto:hengyuan.hhu@gmail.com">Email</a> &nbsp/&nbsp
                         <a href="https://github.com/hengyuan-hu">Github</a> &nbsp/&nbsp
